--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -323,40 +323,46 @@
                                             <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-selfie-preview" translatesAutoresizingMaskIntoConstraints="NO" id="Sze-p9-Syp">
-                                                    <rect key="frame" x="8" y="8" width="284" height="379"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4eK-Pd-MEp" customClass="SCVideoPlayerView">
+                                                    <rect key="frame" x="8" y="8" width="284" height="384"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="zcO-mD-okX" customClass="UserAvatarView" customModule="Taylr" customModuleProvider="target">
+                                                    <rect key="frame" x="16" y="334" width="50" height="50"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="Sze-p9-Syp" secondAttribute="height" multiplier="3:4" id="f2n-tz-pxv"/>
+                                                        <constraint firstAttribute="width" secondItem="zcO-mD-okX" secondAttribute="height" multiplier="1:1" id="pEc-T5-RHR"/>
+                                                        <constraint firstAttribute="width" constant="50" id="rXp-b7-0hW"/>
                                                     </constraints>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zTa-PH-oXs" userLabel="Play">
-                                                    <rect key="frame" x="120" y="168" width="60" height="60"/>
-                                                    <state key="normal" image="ic-play">
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="togglePlayback:" destination="sAP-hW-A20" eventType="touchUpInside" id="ipk-7Y-Nc8"/>
-                                                    </connections>
-                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10m" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="De8-FM-a37">
+                                                    <rect key="frame" x="72" y="349" width="34" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="Sze-p9-Syp" firstAttribute="top" secondItem="sAP-hW-A20" secondAttribute="topMargin" id="8bF-s9-W1m"/>
-                                            <constraint firstAttribute="centerX" secondItem="zTa-PH-oXs" secondAttribute="centerX" id="A2D-An-pRZ"/>
-                                            <constraint firstItem="Sze-p9-Syp" firstAttribute="leading" secondItem="sAP-hW-A20" secondAttribute="leadingMargin" id="l4c-AO-mas"/>
-                                            <constraint firstItem="zTa-PH-oXs" firstAttribute="centerY" secondItem="Sze-p9-Syp" secondAttribute="centerY" id="p3P-7y-sEI"/>
-                                            <constraint firstItem="zTa-PH-oXs" firstAttribute="centerX" secondItem="Sze-p9-Syp" secondAttribute="centerX" id="sEx-xX-bnU"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="Sze-p9-Syp" secondAttribute="trailing" id="v8b-7P-cSV"/>
+                                            <constraint firstItem="4eK-Pd-MEp" firstAttribute="leading" secondItem="sAP-hW-A20" secondAttribute="leading" constant="8" id="3Qm-x3-QOT"/>
+                                            <constraint firstItem="4eK-Pd-MEp" firstAttribute="bottom" secondItem="zcO-mD-okX" secondAttribute="bottom" constant="8" id="LgO-v7-B19"/>
+                                            <constraint firstItem="4eK-Pd-MEp" firstAttribute="top" secondItem="sAP-hW-A20" secondAttribute="top" constant="8" id="X6k-3L-aiO"/>
+                                            <constraint firstAttribute="trailing" secondItem="4eK-Pd-MEp" secondAttribute="trailing" constant="8" id="YQe-Nu-wUJ"/>
+                                            <constraint firstItem="De8-FM-a37" firstAttribute="leading" secondItem="zcO-mD-okX" secondAttribute="trailing" constant="6" id="afm-Mn-4TV"/>
+                                            <constraint firstAttribute="bottom" secondItem="4eK-Pd-MEp" secondAttribute="bottom" constant="8" id="f9d-mj-uvG"/>
+                                            <constraint firstItem="De8-FM-a37" firstAttribute="centerY" secondItem="zcO-mD-okX" secondAttribute="centerY" id="gwe-ln-YC5"/>
+                                            <constraint firstItem="4eK-Pd-MEp" firstAttribute="leading" secondItem="zcO-mD-okX" secondAttribute="leading" constant="-8" id="lpc-tA-g2m"/>
                                         </constraints>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="A2D-An-pRZ"/>
-                                            </mask>
-                                        </variation>
                                         <connections>
-                                            <outlet property="coverFrameView" destination="Sze-p9-Syp" id="GfJ-2Q-P0J"/>
+                                            <outlet property="avatarView" destination="zcO-mD-okX" id="R20-uq-1On"/>
+                                            <outlet property="playerView" destination="4eK-Pd-MEp" id="5zO-vj-HBw"/>
+                                            <outlet property="timeLabel" destination="De8-FM-a37" id="m9i-vW-kg2"/>
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RecorderCell" id="kKP-Iy-gw6">
@@ -414,69 +420,6 @@
             </objects>
             <point key="canvasLocation" x="1006" y="2816"/>
         </scene>
-        <!--Recorder View Controller-->
-        <scene sceneID="Pua-UW-P1A">
-            <objects>
-                <viewController storyboardIdentifier="Recorder" id="Ql2-Jz-gM0" customClass="RecorderViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="GdV-pc-a1d"/>
-                        <viewControllerLayoutGuide type="bottom" id="euU-MK-s1G"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="fUa-NX-IYh">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MIa-44-FDo" userLabel="Camera Preview">
-                                <rect key="frame" x="0.0" y="20" width="600" height="520"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Boo-rZ-3uw" userLabel="Flip Camera">
-                                <rect key="frame" x="16" y="40" width="39" height="30"/>
-                                <state key="normal" image="ic-camera-flip">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7qa-Zj-60n" userLabel="Capture">
-                                <rect key="frame" x="259" y="496" width="83" height="84"/>
-                                <state key="normal" image="ic-capture">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rc7-ox-IdX" userLabel="Magic Wand">
-                                <rect key="frame" x="20" y="542" width="37" height="38"/>
-                                <state key="normal" image="ic-magic-wand">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1sW-Kn-5np" userLabel="Edit Text">
-                                <rect key="frame" x="548" y="547" width="32" height="33"/>
-                                <state key="normal" image="ic-edit-text">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="MIa-44-FDo" firstAttribute="top" secondItem="GdV-pc-a1d" secondAttribute="bottom" id="14h-Gx-lyE"/>
-                            <constraint firstItem="euU-MK-s1G" firstAttribute="top" secondItem="MIa-44-FDo" secondAttribute="bottom" constant="60" id="4lg-yu-nEp"/>
-                            <constraint firstItem="Rc7-ox-IdX" firstAttribute="leading" secondItem="fUa-NX-IYh" secondAttribute="leading" constant="20" id="7Ye-DU-OjK"/>
-                            <constraint firstItem="euU-MK-s1G" firstAttribute="top" secondItem="1sW-Kn-5np" secondAttribute="bottom" constant="20" id="850-Ur-QKA"/>
-                            <constraint firstItem="MIa-44-FDo" firstAttribute="leading" secondItem="fUa-NX-IYh" secondAttribute="leading" id="9ZL-u5-vyJ"/>
-                            <constraint firstItem="Boo-rZ-3uw" firstAttribute="leading" secondItem="fUa-NX-IYh" secondAttribute="leading" constant="20" id="9jH-Rb-h3q"/>
-                            <constraint firstItem="Boo-rZ-3uw" firstAttribute="top" secondItem="GdV-pc-a1d" secondAttribute="bottom" constant="20" id="A1S-U1-3Dk"/>
-                            <constraint firstAttribute="centerX" secondItem="7qa-Zj-60n" secondAttribute="centerX" constant="-0.5" id="BJM-2D-5IB"/>
-                            <constraint firstItem="euU-MK-s1G" firstAttribute="top" secondItem="Rc7-ox-IdX" secondAttribute="bottom" constant="20" id="G43-7g-ULc"/>
-                            <constraint firstAttribute="trailing" secondItem="MIa-44-FDo" secondAttribute="trailing" id="YqU-eA-i2n"/>
-                            <constraint firstItem="euU-MK-s1G" firstAttribute="top" secondItem="7qa-Zj-60n" secondAttribute="bottom" constant="20" id="d8A-Lh-ilj"/>
-                            <constraint firstItem="1sW-Kn-5np" firstAttribute="trailing" secondItem="fUa-NX-IYh" secondAttribute="trailing" constant="-20" id="xWu-OA-SdF"/>
-                        </constraints>
-                    </view>
-                    <nil key="simulatedStatusBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XSS-Fr-Thh" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1670" y="2816"/>
-        </scene>
         <!--Me-->
         <scene sceneID="GiO-5i-rfP">
             <objects>
@@ -520,15 +463,9 @@
     </scenes>
     <resources>
         <image name="ic-back" width="17" height="23"/>
-        <image name="ic-camera-flip" width="39" height="30"/>
-        <image name="ic-capture" width="83" height="84"/>
         <image name="ic-chats" width="32" height="32"/>
         <image name="ic-disclosure" width="11" height="29"/>
-        <image name="ic-edit-text" width="32" height="33"/>
-        <image name="ic-magic-wand" width="37" height="38"/>
         <image name="ic-me" width="34" height="35"/>
-        <image name="ic-play" width="60" height="60"/>
-        <image name="sample-selfie-preview" width="353" height="469"/>
         <image name="sample-taylor-avatar" width="66" height="67"/>
         <image name="sample-taylor-avatar-square" width="167" height="168"/>
     </resources>
