--- a/Taylr/AVKit/AVKit.storyboard
+++ b/Taylr/AVKit/AVKit.storyboard
@@ -91,6 +91,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zPO-M3-p5L">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="2"/>
+                                <color key="trackTintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </progressView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b3o-63-A2P" userLabel="Flip Camera">
                                 <rect key="frame" x="20" y="550" width="39" height="30"/>
                                 <state key="normal" image="ic-camera-flip">
@@ -113,9 +117,12 @@
                             <constraint firstItem="2Fw-rH-c9r" firstAttribute="leading" secondItem="M3U-qM-guW" secondAttribute="leading" id="3PL-62-xQu"/>
                             <constraint firstAttribute="trailing" secondItem="2Fw-rH-c9r" secondAttribute="trailing" id="72f-e3-Gy6"/>
                             <constraint firstItem="b3o-63-A2P" firstAttribute="leading" secondItem="M3U-qM-guW" secondAttribute="leading" constant="20" id="9SI-el-IUd"/>
+                            <constraint firstAttribute="trailing" secondItem="zPO-M3-p5L" secondAttribute="trailing" id="MPs-Sw-JzS"/>
                             <constraint firstAttribute="centerX" secondItem="7s2-e5-NVe" secondAttribute="centerX" constant="-0.5" id="Nn2-UL-EV3"/>
+                            <constraint firstItem="zPO-M3-p5L" firstAttribute="top" secondItem="kas-4p-VNL" secondAttribute="bottom" id="QAi-JY-D6E"/>
                             <constraint firstItem="sS8-ya-4lZ" firstAttribute="top" secondItem="b3o-63-A2P" secondAttribute="bottom" constant="20" id="e6b-6h-udX"/>
                             <constraint firstItem="sS8-ya-4lZ" firstAttribute="top" secondItem="2Fw-rH-c9r" secondAttribute="bottom" id="hn7-Hn-7PE"/>
+                            <constraint firstItem="zPO-M3-p5L" firstAttribute="leading" secondItem="M3U-qM-guW" secondAttribute="leading" id="q8M-gD-ei7"/>
                             <constraint firstItem="sS8-ya-4lZ" firstAttribute="top" secondItem="7s2-e5-NVe" secondAttribute="bottom" constant="20" id="tdQ-bU-MSn"/>
                             <constraint firstItem="b3o-63-A2P" firstAttribute="top" secondItem="kas-4p-VNL" secondAttribute="bottom" constant="20" id="xoA-xb-6Tn"/>
                         </constraints>
@@ -129,6 +136,7 @@
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="previewView" destination="2Fw-rH-c9r" id="0cp-IO-f9u"/>
+                        <outlet property="progressView" destination="zPO-M3-p5L" id="MVy-cv-Da7"/>
                         <outlet property="recordButton" destination="7s2-e5-NVe" id="eOl-bu-Bic"/>
                         <segue destination="uPv-0o-aed" kind="show" identifier="RecorderToEditor" id="SWo-hc-sLD"/>
                     </connections>
