--- a/Taylr/Base.lproj/Onboarding.storyboard
+++ b/Taylr/Base.lproj/Onboarding.storyboard
@@ -239,9 +239,11 @@
                     <connections>
                         <outlet property="tableView" destination="T4Y-Zp-oMf" id="Wyj-rp-zD1"/>
                         <outlet property="view" destination="AWr-CH-w9L" id="UaW-Y6-19D"/>
+                        <segue destination="rZe-eW-0dR" kind="unwind" identifier="UnwindToLoading" unwindAction="unwindToLoading:" id="YE0-0C-3Q7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zA5-0f-p8h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="rZe-eW-0dR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="142" y="274"/>
         </scene>
